Se añaden los botones de cerrar sesión.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="provincia_">Provincia:</string>
     <string name="alergias_">Alergias:</string>
     <string name="antecedentes_toxicos_">Antecedentes tóxicos:</string>
+    <string name="cerrar_sesion">Cerrar sesión</string>
 
 </resources>
