Se ha finalizado el servicio que insertar solicitudes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
 
     <!-- Strings relacionados con realizar solicitud paciente -->
     <string name="motivo_solicitud">Motivo de la solicitud</string>
-    <string name="seleccione_prioridad">Seleccionar prioridad</string>
+    <string name="prioridad_asignada">Prioridad asignada</string>
     <string name="descripcion_de_la_solicitud">Descripción de la solicitud</string>
     <string name="enviar_solicitud">Enviar solicitud</string>
 
