Se ha finalizado el servicio para mostrar avisos de un paciente. Se ha añadido la activity para mostrar la información del hospital.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,8 @@
     <string name="alergias_">Alergias:</string>
     <string name="antecedentes_toxicos_">Antecedentes tóxicos:</string>
     <string name="cerrar_sesion">Cerrar sesión</string>
+    <string name="fecha_fin_">Fecha fin:</string>
+    <string name="repetir_aviso_horas">Repetir cada #H# horas</string>
+    <string name="sin_repeticion">Sin repetición</string>
 
 </resources>
