Servicios implementados: - Ver mapa de camas - Ver detalle del paciente -- Se añaden iconos para representar a los pacientes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,6 @@
     <string name="fecha_fin_">Fecha fin:</string>
     <string name="repetir_aviso_horas">Repetir cada #H# horas</string>
     <string name="sin_repeticion">Sin repetición</string>
+    <string name="nacionalidad_">Nacionalidad:</string>
 
 </resources>
